--- a/css/custom.css
+++ b/css/custom.css
@@ -24,9 +24,10 @@
     position: fixed !important;
 }
 
+/* header details text */
 @media (min-width: 992px) {
     .hero-section-02 .hero-content p {
-        font-size: 18px;
+        font-size: 18px !important;
     }
 }
 
