--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,14 @@
+/* logo */
+.brand-logo {
+    width: 200px;
+}
+
+@media (max-width: 500px) {
+    .brand-logo {
+        width: 135px;
+    }    
+}
+
 /* navbar font style */
 @media (min-width: 992px) {
     .site-menu-main .nav-link-item {
@@ -27,7 +38,7 @@
 /* header details text */
 @media (min-width: 992px) {
     .hero-section-02 .hero-content p {
-        font-size: 18px !important;
+        font-size: 20px !important;
     }
 }
 
@@ -38,8 +49,12 @@
 
 @media (min-width: 992px) {
     .hero-section-01 .hero-content p {
-      font-size: 18px;
+      font-size: 20px;
       margin-bottom: 0;
+    }
+
+    .hero-fluid-slider .hero-slide-single {
+        height: 975px;
     }
 }
 
