--- a/css/custom.css
+++ b/css/custom.css
@@ -129,9 +129,9 @@
 }
 
 /* project details */
-@media (min-width: 992px) {
+@media (min-width: 768px) {
     .object-image {
-        height: 227px;
+        height: 227px !important;
     }
 }
 
