--- a/css/custom.css
+++ b/css/custom.css
@@ -42,6 +42,24 @@
     }
 }
 
+.video-background {
+    object-fit: cover;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1;
+}
+
+video {
+    object-fit: cover;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
 /* what we do font size */
 .hero-section-01 .hero-content p {
     margin-bottom: 40px;
