--- a/css/custom.css
+++ b/css/custom.css
@@ -42,22 +42,28 @@
     }
 }
 
-.video-background {
-    object-fit: cover;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: 1;
+@media (max-width: 500px) {
+    .video-bg-mobile {
+        background-size: contain;
+        background-color: #000000;
+    }
 }
 
-video {
-    object-fit: cover;
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
+.hero-content-mobile-heading {
+    position: absolute;
+    top: 145px;
+    text-align: center;
+}
+
+.hero-content-mobile-details {
+    position: absolute;
+    bottom: 85px;
+    color: #ffffff;
+}
+
+.hero-content_button-group-mobile {
+    position: absolute;
+    bottom: 10px;
 }
 
 /* what we do font size */
@@ -186,7 +192,7 @@ video {
 @media (max-width: 500px) {
     .project-details-hero {
         background-color: black;
-        padding: 60px 0;
+        padding: 120px 0 60px;
     }   
 }
 
