--- a/css/custom.css
+++ b/css/custom.css
@@ -273,3 +273,11 @@
 .grid-image {
     margin-bottom: 24px;
 }
+
+/*client image */
+@media (max-width: 500px) {
+    .client-img-mobile {
+        width: 280px;
+        height: 200px;
+    }   
+}
