--- a/css/custom.css
+++ b/css/custom.css
@@ -45,9 +45,13 @@
 
 @media (max-width: 500px) {
     .video-bg-mobile {
-        /*background-size: contain;*/
+        background-size: auto;
         background-color: #000000;
     }
+}
+
+.overlay-07::before {
+    background: rgba(var(--black-2-rgb), 0.5);
 }
 
 .hero-content-mobile-heading {
