--- a/css/custom.css
+++ b/css/custom.css
@@ -45,12 +45,12 @@
 
 @media (max-width: 500px) {
     .video-bg-mobile {
-        background-size: auto;
+        background-size: contain;
         background-color: #000000;
     }
 
     .hero-fluid-slider .hero-slide-single {
-        min-height: 508px;
+        min-height: 455px;
         padding-top: 0;
         padding-bottom: 0;
     }
@@ -299,4 +299,8 @@
         width: 280px;
         height: 200px;
     }   
+}
+
+.footer-brand img {
+    width: 150px;
 }
